{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 20,
  "lineage": "69dfdfb5-3356-6267-4033-7cbb4b1bfe01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mylab-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:internet-gateway/igw-05c42727e97a531a9",
            "id": "igw-05c42727e97a531a9",
            "owner_id": "072873244107",
            "tags": {
              "Name": "mylab-igw"
            },
            "tags_all": {
              "Name": "mylab-igw"
            },
            "vpc_id": "vpc-0ec7fc459b5eabc4c"
          },
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mylab-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:route-table/rtb-095bda79dd8c71bff",
            "id": "rtb-095bda79dd8c71bff",
            "owner_id": "072873244107",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c42727e97a531a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mylab-rtb"
            },
            "tags_all": {
              "Name": "mylab-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec7fc459b5eabc4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mylab-igw",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mylab-assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ee15d7fa62e49dc",
            "route_table_id": "rtb-095bda79dd8c71bff",
            "subnet_id": "subnet-0af0e0dfa88260b95"
          },
          "dependencies": [
            "aws_internet_gateway.mylab-igw",
            "aws_route_table.mylab-rtb",
            "aws_subnet.mylab-subnet-1",
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mylab-sgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:security-group/sg-0e33f34ceb0d0e130",
            "description": "To allow inbound outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e33f34ceb0d0e130",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mylab-sg",
            "name_prefix": "",
            "owner_id": "072873244107",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mylab-sg"
            },
            "tags_all": {
              "Name": "mylab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec7fc459b5eabc4c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mylab-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:subnet/subnet-0af0e0dfa88260b95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af0e0dfa88260b95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072873244107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mylab-subnet-1"
            },
            "tags_all": {
              "Name": "mylab-subnet-1"
            },
            "vpc_id": "vpc-0ec7fc459b5eabc4c"
          },
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mylab-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:subnet/subnet-01d25d09f28005b6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d25d09f28005b6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072873244107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mylab-subnet-2"
            },
            "tags_all": {
              "Name": "mylab-subnet-2"
            },
            "vpc_id": "vpc-0ec7fc459b5eabc4c"
          },
          "dependencies": [
            "aws_vpc.mylab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mylab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072873244107:vpc/vpc-0ec7fc459b5eabc4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-08d099e397d8d0910",
            "default_route_table_id": "rtb-0cef572ddb618e310",
            "default_security_group_id": "sg-0cc90847749050284",
            "dhcp_options_id": "dopt-46ce473c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ec7fc459b5eabc4c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cef572ddb618e310",
            "owner_id": "072873244107",
            "tags": {
              "Name": "mylab-vpc"
            },
            "tags_all": {
              "Name": "mylab-vpc"
            }
          }
        }
      ]
    }
  ]
}